--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,7 +1,16 @@
-<div>
-  <label>
-    Number of Players
-  </label>
-  <input type="number" [(ngModel)]="noOfPlayer" required placeholder="Enter Number of Players" />
-  <button type="button" (click)="onSubmit()">Submit</button>
+<div class="container">
+
+  <div class="d-flex-vertical middle">
+    <div>
+      <h1>
+        Number of Players
+      </h1>
+    </div>
+    <div>
+      <input type="number" [(ngModel)]="noOfPlayer" required placeholder="Enter Number of Players" />
+    </div>
+    <div>
+      <button type="button" (click)="onSubmit()">Submit</button>
+    </div>
+  </div>
 </div>
