--- a/src/app/input/input.component.css
+++ b/src/app/input/input.component.css
@@ -1,17 +1,31 @@
 .container {
-    background: url('src/assets/images/22372133-playing-card-background-pattern.jpg');
+    position: relative;
+    top: 200px;
+    left: 300px;
+    margin-right: 500px;
 }
 
-.middle {
-    width: 100px;
-    height: 100px;
-    background-color: red;
+.card {
+    box-shadow: -5px 0 10px 1px #aaa;
+    background: white;
+    border-radius: 8px;
+    padding: 50px;
+    height: 300px;
+    justify-content: space-around;
+}
 
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+.title {
+    font-size: 53px;
+    font-family: Arial Rounded MT Bold;
+}
 
-    margin: auto;
+.player {
+    border: 4px solid red;
+    font-size: x-large;
+    padding: 6px;
+    border-radius: 10px;
+}
+
+.player:focus {
+    outline: none;
 }
