--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,16 +1,20 @@
 <div class="container">
-
-  <div class="d-flex-vertical middle">
-    <div>
-      <h1>
-        Number of Players
-      </h1>
-    </div>
-    <div>
-      <input type="number" [(ngModel)]="noOfPlayer" required placeholder="Enter Number of Players" />
-    </div>
-    <div>
-      <button type="button" (click)="onSubmit()">Submit</button>
-    </div>
+  <div class="d-flex-vertical">
+    <form [formGroup]="form">
+      <div class="card d-flex-vertical">
+        <div>
+          <span class="title">
+            Number of Players
+          </span>
+        </div>
+        <div>
+          <input formControlName="noOfPlayer" class="player" type="text" required
+            placeholder="Enter Number of Players" />
+        </div>
+        <div>
+          <button [disabled]="form.invalid" class="submit" type="button" (click)="onSubmit()">Submit</button>
+        </div>
+      </div>
+    </form>
   </div>
 </div>
