--- a/src/app/name-input/name-input.component.html
+++ b/src/app/name-input/name-input.component.html
@@ -1,7 +1,14 @@
-<form [formGroup]="noOfPlayerForm">
-  <div *ngFor="let count of fakeArrayOfPlayer">
-    <label>Player {{ count }} </label>
-    <input formControlName="player_{{ count }}" type="text"/>
+<div class="container">
+  <div class="card d-flex-vertical">
+    <div>
+      <span class="title">Enter Players Name</span>
+    </div>
+    <div class="d-flex-vertical players">
+      <div class="player" *ngFor="let _ of [].constructor(noOfPlayer), let x = index">
+        <label class="player-title">Player {{ x + 1 }} </label>
+        <input class="player-input" #playerName type="text" />
+      </div>
+    </div>
+    <button class="submit" (click)="onSubmit()">Submit</button>
   </div>
-  <button (click)="onSubmit()">Submit</button>
-</form>
+</div>
