--- a/src/app/scoreboard/scoreboard.component.css
+++ b/src/app/scoreboard/scoreboard.component.css
@@ -1,3 +1,16 @@
 .score {
   width: 100px;
 }
+
+.card {
+  box-shadow: -5px 0 10px 1px #aaa;
+  background: white;
+  border-radius: 8px;
+  padding: 25px;
+  justify-content: space-between;
+  width: fit-content;
+}
+
+.add {
+  justify-content: center;
+}
